<resources>
    <string name="app_name">scp</string>
    <string name="scp">SCP</string>
    <string name="login">ログイン</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="logout">ログアウト</string>
    <string name="id">id</string>
    <string name="pass">パスワード</string>
</resources>
