<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="logout_onClick"
        android:text="@string/logout"
        android:textColor="@android:color/background_dark"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="312dp"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/className"
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:background="#00dfff"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="52dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="@string/monday"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="87dp" />

                    <TextView
                        android:id="@+id/monday"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="TextView"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="106dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="@string/tuesday"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="215dp"
                        tools:layout_editor_absoluteY="87dp" />

                    <TextView
                        android:id="@+id/tuesday"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="TextView"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="215dp"
                        tools:layout_editor_absoluteY="106dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title3"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="@string/wednesday"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="310dp" />

                    <TextView
                        android:id="@+id/wednesday"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="TextView"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="329dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title4"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="@string/thursday"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="215dp"
                        tools:layout_editor_absoluteY="310dp" />

                    <TextView
                        android:id="@+id/thursday"
                        android:layout_width="180dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:background="#00dfff"
                        android:text="TextView"
                        android:textAlignment="center"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="215dp"
                        tools:layout_editor_absoluteY="106dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/title5"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#00dfff"
                    android:text="@string/friday"
                    android:textAlignment="center"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="115dp"
                    tools:layout_editor_absoluteY="521dp" />

                <TextView
                    android:id="@+id/friday"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:background="#00dfff"
                    android:text="TextView"
                    android:textAlignment="center"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="115dp"
                    tools:layout_editor_absoluteY="540dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>